--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Inicial</title>
+ <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <h1>Titulo da pagina inicial</h1>
     <p>
         Projeto da aula de IW1 Turma A
     </p>
+<div class="card">
+<div class="card-imagem">
+    <div>
+        <div>
+         <img src="Assets/Celular.webp">
+        </div>
+        <h1>10 Mil reais</h1>
+    </div>
+    Sem garantia
+</div>
+</div>
 </body>
 </html>
