--- a/index.html
+++ b/index.html
@@ -1,27 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Inicial</title>
- <link rel="stylesheet" href="estilo.css">
+    <title>Página inicial</title>
+    <link href="estilo.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Titulo da pagina inicial</h1>
-    <p>
-        Projeto da aula de IW1 Turma A
-    </p>
-<div class="card">
-<div class="card-imagem">
-    <div>
-        <div>
-         <img src="Assets/Celular.webp">
+    <h1>Loja Do Linguini</h1>
+    <p>Entre preços e promoções de qualidade <br> As melhores ofertas estão aqui.</p>
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Coisa de pobre.webp"/>
         </div>
-        <h1>10 Mil reais</h1>
+        <div>
+            Notebook
+        </div>
+        <div>
+            R$ 2487,20
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
+    </div> <!-- Fechamento do Card-->
+   
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Coisa de Rico.webp"/>
+        </div>
+        <div>
+            Video Game PS4
+        </div>
+        <div>
+            R$ 4.264,00
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
+
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Escravo.webp"/>
+        </div>
+        <div>
+            Escravo Aspirador
+        </div>
+        <div>
+            R$ 170,90
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
     </div>
-    Sem garantia
-</div>
-</div>
+
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Fone barato.webp"/>
+        </div>
+        <div>
+            Headset sem fio
+        </div>
+        <div>
+            R$ 950,57
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Fone de probre.webp"/>
+        </div>
+        <div>
+            Fone Celular com Fio
+        </div>
+        <div>
+            R$ 256,45
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Monitor.webp"/>
+        </div>
+        <div>
+            Monitor
+        </div>
+        <div>
+            R$ 2.350,00
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-imagem">
+            <img src="Assets/Placa de video.webp"/>
+        </div>
+        <div>
+            Placa De Video
+        </div>
+        <div>
+            R$ 3.458,75
+        </div>
+        <div>
+            <button class="card-botao">
+                <b>Comprar</b>
+            </button>
+        </div>
+    </div>
 </body>
 </html>
